--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Hosting</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <h4 class="stat-title">Education</h4>
