--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </p>
                 <div class="btn-con">
                     <!-- <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        <span class="btn-text">My Resume</span>
+                        <span class="btn-icon"> <i class="fas fa-solid fa-book"></i> </span>
                     </a> -->
                 </div>
             </div>
@@ -46,13 +46,15 @@
                 <div >
                     <h4>Hi, I am Amrut. Nice to meet you.</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                        Exceptionally focused and reliable Entry level Frontend
+Developer with an outstanding work ethic .I am adept
+at contributing to a highly collaborating work
+environment, finding solutions and determining client
+satisfaction. I am a fast learner and quickly integrate to
+a team so I can provide value to a company and the
+customers. I am experienced in object-oriented
+programming , developing , testing & debugging code .<br /> <br /> Critical thinker with an instinct for design who plans to use these qualities in a front-end developer role that allows me to further develop my skills.
+
                     </p>
                     <!-- <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -174,7 +176,7 @@
                     <p class="tl-duration">DEC 2021-JUN 2022</p>
                     <h5>PRODUCT ENGINEERING<span> - School of Accelarated Learning</span></h5>
                     <p>
-                        Mumbai,Maharashtra
+                        Hyderabad, Telangana
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -196,7 +198,7 @@
                     <p>
 Calicut, Kearala                    </p>
                 </div>
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
@@ -225,7 +227,7 @@ Calicut, Kearala                    </p>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="container" id="portfolio">
@@ -381,7 +383,7 @@ Calicut, Kearala                    </p>
                 </div>
             </div>
         </section>
-        <section class="container" id="blogs">
+        <!-- <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
                     <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
@@ -461,7 +463,7 @@ Calicut, Kearala                    </p>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -553,7 +555,7 @@ Calicut, Kearala                    </p>
                             <div class="submit-btn">
                                 <a href="#" class="main-btn">
                                     <span class="btn-text">Download CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                                    <span class="btn-icon"><i class="fas fa-book"></i></span>
                                 </a>
                             </div>
                         </form>
@@ -573,9 +575,9 @@ Calicut, Kearala                    </p>
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
-        <div class="control" data-id="blogs">
+        <!-- <div class="control" data-id="blogs">
             <i class="far fa-newspaper"></i>
-        </div>
+        </div> -->
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
