--- a/index.html
+++ b/index.html
@@ -198,36 +198,7 @@ programming , developing , testing & debugging code .<br /> <br /> Critical thin
                     <p>
 Calicut, Kearala                    </p>
                 </div>
-                <!-- <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2009 - 2013</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div> -->
+               
             </div>
         </section>
         <section class="container" id="portfolio">
@@ -383,87 +354,7 @@ Calicut, Kearala                    </p>
                 </div>
             </div>
         </section>
-        <!-- <section class="container" id="blogs">
-            <div class="blogs-content">
-                <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
-                </div>
-                <div class="blogs">
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Create Your Own Website
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Become an Expert in Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Become a Web Designer in 10 Days
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Debbuging made easy with Web Inspector
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Get started with Web Design and UI Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                This is what you need to know about Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+        
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -473,8 +364,7 @@ Calicut, Kearala                    </p>
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            If you wanna get in touch, talk to me about a project collaboration or just say hi,
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -483,7 +373,7 @@ Calicut, Kearala                    </p>
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : India, Kerala, Calicut
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -492,7 +382,7 @@ Calicut, Kearala                    </p>
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: amrutsagar06@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -501,7 +391,7 @@ Calicut, Kearala                    </p>
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: St. Josephs's College Devagiri, Calicut</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -510,7 +400,7 @@ Calicut, Kearala                    </p>
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: +91-8848236156</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -519,7 +409,7 @@ Calicut, Kearala                    </p>
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: English, Malayalam, Hindi</span>
                                 </p>
                             </div>
                         </div>
